# platform.core.multimedia.libmm-wfd

./: AUTHORS  Makefile.am  com.samsung.wfd.server.service  config.h.in  configure  configure.ac  libmm-wfd.manifest  mm-wfd.pc.in  project.config
common/: Makefile.am  mm_wfd_attrs.c  mm_wfd_ini.c  mm_wfd_sink_ini.c
common/include/: mm_wfd_attrs.h  mm_wfd_ini.h  mm_wfd_sink_dlog.h  mm_wfd_sink_ini.h  mm_wfd_sink_wfd_enum.h
config/: Makefile.am  Makefile.in  mmfw_wfd.ini  mmfw_wfd_sink.ini
packaging/: libmm-wfd.spec
proxy/: Makefile.am  mm_wfd_proxy_test.c
server/: Makefile.am  miracast_server.c  wfd-structure.h
sink/: Makefile.am  a.diff  mm_wfd_sink.c  mm_wfd_sink_manager.c  mm_wfd_sink_priv.c  mm_wfd_sink_util.c  mm_wfd_sink_wayland.c
sink/include/: mm_wfd_sink.h  mm_wfd_sink_manager.h  mm_wfd_sink_priv.h  mm_wfd_sink_util.h
sink_test/: Makefile.am  mm_wfd_sink_testsuite.c  mm_wfd_sink_testsuite2.c
src/: .mm_wfd_sink_priv.c.swp  Makefile.am  mm_wfd.c  mm_wfd_attrs.c  mm_wfd_ini.c  mm_wfd_priv.c  mm_wfd_proxy.c  mm_wfd_sink.c  mm_wfd_sink_attrs.c  mm_wfd_sink_ini.c  mm_wfd_sink_manager.c  mm_wfd_sink_priv.c  mm_wfd_sink_util.c
src/include/: mm_wfd.h  mm_wfd_attrs.h  mm_wfd_ini.h  mm_wfd_priv.h  mm_wfd_proxy.h  mm_wfd_sink.h  mm_wfd_sink_dlog.h  mm_wfd_sink_enum.h  mm_wfd_sink_ini.h  mm_wfd_sink_priv.h  mm_wfd_sink_util.h  mm_wfd_sink_wayland.h  wfd-stub.h
test/: Makefile.am  mm_wfd_testsuite.c
